--- a/_locales/ca/messages.json
+++ b/_locales/ca/messages.json
@@ -252,9 +252,7 @@
   "userUnbanned": "L'usuari s'ha desbloquejat correctament",
   "userUnbanFailed": "Desbloquejament fallit!",
   "banUser": "Bloquejar usuari",
-  "banUserConfirm": "Are you sure you want to ban user?",
   "banUserAndDeleteAll": "Ban and Delete All",
-  "banUserAndDeleteAllConfirm": "Are you sure you want to ban the user and delete all his messages?",
   "userBanned": "User banned successfully",
   "userBanFailed": "Bloquejar usuari fallit!",
   "leaveGroup": "Marxar del grup",
@@ -375,7 +373,6 @@
   "openGroupURL": "URL del grup obert",
   "enterAnOpenGroupURL": "Introdueix un URL de grup obert",
   "next": "Següent",
-  "description": "1 minut",
   "invalidGroupNameTooShort": "Entra un nom de grup, si us plau",
   "invalidGroupNameTooLong": "Introdueix un nom de grup mes curt",
   "pickClosedGroupMember": "Com a mínim, tria 1 membre per al grup, si us plau",
@@ -458,6 +455,7 @@
   "noAudioOutputFound": "No audio output found",
   "callMediaPermissionsTitle": "Voice and video calls",
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
   "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
   "menuCall": "Call",
