--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -252,9 +252,7 @@
   "userUnbanned": "Benutzer erfolgreich freigegeben",
   "userUnbanFailed": "Freigabe fehlgeschlagen!",
   "banUser": "Benutzer blockieren",
-  "banUserConfirm": "Are you sure you want to ban user?",
   "banUserAndDeleteAll": "Blockieren und alles löschen",
-  "banUserAndDeleteAllConfirm": "Bist du dir sicher das du den Nutzer blockieren und alle seine Nachrichten löschen möchtest?",
   "userBanned": "User banned successfully",
   "userBanFailed": "Blockieren fehlgeschlagen!",
   "leaveGroup": "Gruppe Verlassen",
@@ -375,7 +373,6 @@
   "openGroupURL": "Gruppen-URL öffnen",
   "enterAnOpenGroupURL": "Geben Sie eine offene Gruppen-URL ein.",
   "next": "Weiter",
-  "description": "Description",
   "invalidGroupNameTooShort": "Bitte geben Sie einen Gruppennamen ein.",
   "invalidGroupNameTooLong": "Bitte geben Sie einen kürzeren Gruppennamen ein.",
   "pickClosedGroupMember": "Bitte wählen Sie mindestens zwei Gruppenmitglieder aus.",
@@ -423,7 +420,7 @@
   "dialogClearAllDataDeletionFailedTitle": "Daten nicht gelöscht",
   "dialogClearAllDataDeletionFailedDesc": "Die Daten wurden aufgrund eines unbekannten Fehlers nicht gelöscht. Möchten Sie Ihre Daten nur von diesem Gerät löschen?",
   "dialogClearAllDataDeletionFailedTitleQuestion": "Möchten Sie Daten nur von diesem Gerät löschen?",
-  "dialogClearAllDataDeletionFailedMultiple": "Diese Serviceknoten haben die Daten nicht gelöscht: $snodes$",
+  "dialogClearAllDataDeletionFailedMultiple": "Daten nicht gelöscht von Service Node. Service Node ID: $snodes$",
   "dialogClearAllDataDeletionQuestion": "Möchten Sie nur dieses Gerät entfernen, oder Ihr Konto vollständig löschen?",
   "deviceOnly": "Nur Geräte",
   "entireAccount": "Gesamtes Konto",
@@ -458,6 +455,7 @@
   "noAudioOutputFound": "No audio output found",
   "callMediaPermissionsTitle": "Voice and video calls",
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
   "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
   "menuCall": "Call",
