--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -73,7 +73,7 @@
   "attemptingReconnection": "Intentando volver a conectar en $reconnect_duration_in_seconds$ segundos",
   "submitDebugLog": "Registro de depuración (log)",
   "debugLog": "Registro de depuración",
-  "showDebugLog": "Show Debug Log",
+  "showDebugLog": "Mostrar Registro de Depuración",
   "goToReleaseNotes": "Ir a las notas de versión",
   "goToSupportPage": "Ir a la página de soporte técnico",
   "menuReportIssue": "Informar de un problema",
@@ -252,9 +252,7 @@
   "userUnbanned": "Usuario desbloqueado con éxito",
   "userUnbanFailed": "¡Error al desbloquear!",
   "banUser": "Bloquear usuario",
-  "banUserConfirm": "Are you sure you want to ban user?",
   "banUserAndDeleteAll": "Banear y Eliminar Todo",
-  "banUserAndDeleteAllConfirm": "¿Estás seguro de que quieres banear al usuario y eliminar todos sus mensajes?",
   "userBanned": "User banned successfully",
   "userBanFailed": "¡Bloqueo fallido!",
   "leaveGroup": "Abandonar Grupo",
@@ -375,7 +373,6 @@
   "openGroupURL": "URL de grupo abierto",
   "enterAnOpenGroupURL": "Ingresa una URL de grupo abierto",
   "next": "Siguiente",
-  "description": "Description",
   "invalidGroupNameTooShort": "Por favor, ingresa un nombre de grupo",
   "invalidGroupNameTooLong": "Por favor, ingresa un nombre de grupo más corto",
   "pickClosedGroupMember": "Por favor, elige al menos 2 miembros del grupo",
@@ -416,7 +413,7 @@
   "unpinConversation": "Desanclar conversación",
   "pinConversationLimitTitle": "Límite de conversaciones ancladas",
   "pinConversationLimitToastDescription": "Solo puedes anclar $number$ conversaciones",
-  "showUserDetails": "Show User Details",
+  "showUserDetails": "Mostrar Detalles del Usuario",
   "latestUnreadIsAbove": "El primer mensaje no leído está arriba",
   "sendRecoveryPhraseTitle": "Enviando Frase de Recuperación",
   "sendRecoveryPhraseMessage": "Estás intentando enviar tu frase de recuperación, que puede utilizarse para acceder a tu cuenta. ¿Estás seguro de que deseas enviar este mensaje?",
@@ -436,14 +433,14 @@
   "notificationSubtitle": "Notificaciones - $setting$",
   "surveyTitle": "Realiza nuestra encuesta de Session",
   "goToOurSurvey": "Ir a la encuesta",
-  "blockAll": "Block All",
+  "blockAll": "Bloquear Todo",
   "messageRequests": "Message Requests",
   "requestsSubtitle": "Pending Requests",
   "requestsPlaceholder": "No requests",
   "messageRequestsDescription": "Enable Message Request Inbox",
   "incomingCallFrom": "Incoming call from '$name$'",
   "ringing": "Ringing...",
-  "establishingConnection": "Establishing connection...",
+  "establishingConnection": "Estableciendo conexión...",
   "accept": "Aceptar",
   "decline": "Rechazar",
   "endCall": "Finalizar llamada",
@@ -456,11 +453,12 @@
   "noCameraFound": "Cámara no encontrada",
   "noAudioInputFound": "No se encontró dispositivo de sonido",
   "noAudioOutputFound": "No audio output found",
-  "callMediaPermissionsTitle": "Voice and video calls",
+  "callMediaPermissionsTitle": "Llamadas de audio y video",
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
   "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
-  "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
-  "menuCall": "Call",
-  "startedACall": "You called $name$",
-  "answeredACall": "Call with $name$"
+  "callMediaPermissionsDialogContent": "La implementación actual de llamadas de voz/video expondrá tu dirección IP a los servidores de Oxen Foundation y al usuario llamado.",
+  "menuCall": "Llamar",
+  "startedACall": "Has llamado a $name$",
+  "answeredACall": "Llamada con $name$"
 }
