--- a/_locales/es_419/messages.json
+++ b/_locales/es_419/messages.json
@@ -54,9 +54,9 @@
   "mediaEmptyState": "No media",
   "documents": "Documents",
   "documentsEmptyState": "No documents",
-  "today": "Today",
-  "yesterday": "Yesterday",
-  "thisWeek": "This week",
+  "today": "Hoy",
+  "yesterday": "Ayer",
+  "thisWeek": "Esta semana",
   "thisMonth": "This Month",
   "voiceMessage": "Voice Message",
   "dangerousFileType": "For security reasons, this file type cannot be sent",
@@ -71,9 +71,9 @@
   "offline": "Offline",
   "checkNetworkConnection": "Check your network connection.",
   "attemptingReconnection": "Attempting reconnect in $reconnect_duration_in_seconds$ seconds",
-  "submitDebugLog": "Debug log",
-  "debugLog": "Debug Log",
-  "showDebugLog": "Show Debug Log",
+  "submitDebugLog": "Registro de depuración",
+  "debugLog": "Registro de Depuración",
+  "showDebugLog": "Mostrar Registro de Depuración",
   "goToReleaseNotes": "Go to Release Notes",
   "goToSupportPage": "Go to Support Page",
   "menuReportIssue": "Report an Issue",
@@ -86,7 +86,7 @@
   "conversationsHeader": "Conversations",
   "contactsHeader": "Contacts",
   "messagesHeader": "Messages",
-  "settingsHeader": "Settings",
+  "settingsHeader": "Ajustes",
   "typingAlt": "Typing animation for this conversation",
   "contactAvatarAlt": "Avatar for contact $name$",
   "downloadAttachment": "Download Attachment",
@@ -252,9 +252,7 @@
   "userUnbanned": "User unbanned successfully",
   "userUnbanFailed": "Unban failed!",
   "banUser": "Ban User",
-  "banUserConfirm": "Are you sure you want to ban user?",
   "banUserAndDeleteAll": "Ban and Delete All",
-  "banUserAndDeleteAllConfirm": "Are you sure you want to ban the user and delete all his messages?",
   "userBanned": "User banned successfully",
   "userBanFailed": "Ban failed!",
   "leaveGroup": "Leave Group",
@@ -327,7 +325,7 @@
   "addAsModerator": "Add As Moderator",
   "removeFromModerators": "Remove From Moderators",
   "add": "Add",
-  "addingContacts": "Adding contacts to",
+  "addingContacts": "Adding contacts to $name$",
   "noContactsToAdd": "No contacts to add",
   "noMembersInThisGroup": "No other members in this group",
   "noModeratorsToRemove": "no moderators to remove",
@@ -375,7 +373,6 @@
   "openGroupURL": "Open Group URL",
   "enterAnOpenGroupURL": "Enter an open group URL",
   "next": "Next",
-  "description": "Description",
   "invalidGroupNameTooShort": "Please enter a group name",
   "invalidGroupNameTooLong": "Please enter a shorter group name",
   "pickClosedGroupMember": "Please pick at least 1 group member",
@@ -458,6 +455,7 @@
   "noAudioOutputFound": "No audio output found",
   "callMediaPermissionsTitle": "Voice and video calls",
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
   "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
   "menuCall": "Call",
