--- a/_locales/fa/messages.json
+++ b/_locales/fa/messages.json
@@ -252,9 +252,7 @@
   "userUnbanned": "کاربر با موفقیت غیر مستود شد",
   "userUnbanFailed": "غیر مستود کردن شکست خورد!",
   "banUser": "مسدود کردن کاربر",
-  "banUserConfirm": "Are you sure you want to ban user?",
   "banUserAndDeleteAll": "مستود کردن کاربر و حذف کردن داده های آن",
-  "banUserAndDeleteAllConfirm": "Are you sure you want to ban the user and delete all his messages?",
   "userBanned": "User banned successfully",
   "userBanFailed": "مسدود کردن شکست خورد!",
   "leaveGroup": "ترک کردن گروه",
@@ -327,7 +325,7 @@
   "addAsModerator": "Add As Moderator",
   "removeFromModerators": "Remove From Moderators",
   "add": "اضافه کردن",
-  "addingContacts": "Adding contacts to",
+  "addingContacts": "Adding contacts to $name$",
   "noContactsToAdd": "مخاطبی برای اضافه کردن وجود ندارد",
   "noMembersInThisGroup": "No other members in this group",
   "noModeratorsToRemove": "مدیری برای حذف کردن وجود ندارد",
@@ -375,7 +373,6 @@
   "openGroupURL": "باز کردن آدرس گروه",
   "enterAnOpenGroupURL": "آدرس یک گروه باز(عمومی) را وارد کنید",
   "next": "بعدی",
-  "description": "۱ دقیقه",
   "invalidGroupNameTooShort": "لطفا نام گروه را وارد کنید",
   "invalidGroupNameTooLong": "لطفا نام کوتاه‌تری وارد کنید",
   "pickClosedGroupMember": "لطفا حداقل یک عضو گروه را انتخاب کنید",
@@ -458,6 +455,7 @@
   "noAudioOutputFound": "No audio output found",
   "callMediaPermissionsTitle": "Voice and video calls",
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
   "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
   "menuCall": "Call",
