--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -73,7 +73,7 @@
   "attemptingReconnection": "Tentative de reconnexion $reconnect_duration_in_seconds$ secondes",
   "submitDebugLog": "Journal de débogage",
   "debugLog": "Journal de débogage",
-  "showDebugLog": "Show Debug Log",
+  "showDebugLog": "Afficher le journal de débogage",
   "goToReleaseNotes": "Accéder aux notes de mise à jour",
   "goToSupportPage": "Accéder à la page d’assistance",
   "menuReportIssue": "Signaler un problème",
@@ -112,9 +112,9 @@
   "delete": "Supprimer",
   "messageDeletionForbidden": "Vous n'êtes pas autorisé à supprimer les messages des autres utilisateurs.",
   "deleteJustForMe": "Supprimer juste pour moi",
-  "deleteForEveryone": "Delete for everyone",
-  "deleteMessagesQuestion": "Delete those messages?",
-  "deleteMessageQuestion": "Delete this message?",
+  "deleteForEveryone": "Supprimer pour tous",
+  "deleteMessagesQuestion": "Êtes-vous certains de vouloir supprimer les messages?",
+  "deleteMessageQuestion": "Êtes-vous sûr de vouloir supprimer ce message?",
   "deleteMessages": "Supprimer les messages",
   "deleted": "Supprimé",
   "messageDeletedPlaceholder": "Ce message a été supprimé",
@@ -140,7 +140,7 @@
   "copySessionID": "Copier la Session ID",
   "copyOpenGroupURL": "Copier l'URL de Group",
   "save": "Enregistrer",
-  "saveLogToDesktop": "Save log to desktop",
+  "saveLogToDesktop": "Enregistrer le journal sur le bureau de l'ordinateur",
   "saved": "Enregistré",
   "permissions": "Autorisations",
   "general": "Général",
@@ -150,7 +150,7 @@
   "linkPreviewDescription": "Les aperçus sont pris en charge pour la plupart des URLs",
   "linkPreviewsConfirmMessage": "Vous n'aurez pas une protection complète des métadonnées en envoyant des aperçu de liens.",
   "mediaPermissionsTitle": "Microphone",
-  "mediaPermissionsDescription": "Allow access to microphone",
+  "mediaPermissionsDescription": "Autoriser l'accès au microphone",
   "spellCheckTitle": "Vérification orthographique",
   "spellCheckDescription": "Activer la vérification de l’orthographe du texte saisi dans la fenêtre de rédaction des messages",
   "spellCheckDirty": "Vous devez redémarrer Session pour appliquer ces changements.",
@@ -252,9 +252,7 @@
   "userUnbanned": "Utilisateur débanni avec succès",
   "userUnbanFailed": "Le débannissement a échoué !",
   "banUser": "Bannir l'utilisateur",
-  "banUserConfirm": "Êtes-vous sûr de vouloir bannir cet utilisateur ?",
   "banUserAndDeleteAll": "Bannir et tout supprimer",
-  "banUserAndDeleteAllConfirm": "Êtes-vous sûr de vouloir bannir cet utilisateur et supprimer tous ses messages ?",
   "userBanned": "Utilisateur banni",
   "userBanFailed": "Le bannissement a échoué",
   "leaveGroup": "Quitter le groupe",
@@ -375,7 +373,6 @@
   "openGroupURL": "URL du groupe public",
   "enterAnOpenGroupURL": "Saisissez une URL de groupe public",
   "next": "Suivant",
-  "description": "Description",
   "invalidGroupNameTooShort": "Veuillez saisir un nom de groupe",
   "invalidGroupNameTooLong": "Veuillez saisir un nom de groupe plus court",
   "pickClosedGroupMember": "Veuillez sélectionner au moins 2 membres",
@@ -416,7 +413,7 @@
   "unpinConversation": "Désépingler la conversation",
   "pinConversationLimitTitle": "Limite de conversation épinglée",
   "pinConversationLimitToastDescription": "Vous pouvez seulement épingler $number$ conversations",
-  "showUserDetails": "Show User Details",
+  "showUserDetails": "Afficher les détails de l'utilisateur",
   "latestUnreadIsAbove": "Le premier message non lu se situe au-dessus",
   "sendRecoveryPhraseTitle": "Envoyer la phrase de récupération",
   "sendRecoveryPhraseMessage": "Vous essayer actuellement d’envoyer votre phrase de récupération, qui peut être utilisée pour accéder a votre compte. Êtes-vous sûre de vouloir envoyer ce message ?",
@@ -434,33 +431,34 @@
   "recoveryPhraseRevealMessage": "Sécurisez votre compte en enregistrant votre phrase de récupération. Afficher votre phrase de récupération puis stockez-la en toute sécurité pour la sécuriser.",
   "recoveryPhraseRevealButtonText": "Afficher la phrase de récupération",
   "notificationSubtitle": "Paramètres des notifications",
-  "surveyTitle": "Take our Session Survey",
-  "goToOurSurvey": "Go to our survey",
-  "blockAll": "Block All",
-  "messageRequests": "Message Requests",
-  "requestsSubtitle": "Pending Requests",
-  "requestsPlaceholder": "No requests",
-  "messageRequestsDescription": "Enable Message Request Inbox",
-  "incomingCallFrom": "Incoming call from '$name$'",
-  "ringing": "Ringing...",
-  "establishingConnection": "Establishing connection...",
-  "accept": "Accept",
-  "decline": "Decline",
-  "endCall": "End call",
-  "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
-  "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
-  "unableToCall": "Cancel your ongoing call first",
-  "unableToCallTitle": "Cannot start new call",
-  "callMissed": "Missed call from $name$",
-  "callMissedTitle": "Call missed",
-  "noCameraFound": "No camera found",
-  "noAudioInputFound": "No audio input found",
-  "noAudioOutputFound": "No audio output found",
-  "callMediaPermissionsTitle": "Voice and video calls",
-  "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
-  "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
-  "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
-  "menuCall": "Call",
-  "startedACall": "You called $name$",
-  "answeredACall": "Call with $name$"
+  "surveyTitle": "Répondre au sondage Session",
+  "goToOurSurvey": "Aller au sondage",
+  "blockAll": "Tout bloquer",
+  "messageRequests": "Requêtes de messages",
+  "requestsSubtitle": "Demandes en fils d'attente",
+  "requestsPlaceholder": "Aucune demande",
+  "messageRequestsDescription": "Mettre en fonction, la boîte réception de demande de mise en attente",
+  "incomingCallFrom": "Appel entrant de '$name$'",
+  "ringing": "Ça sonne...",
+  "establishingConnection": "Établissement de la connexion...",
+  "accept": "Accepter",
+  "decline": "Refuser",
+  "endCall": "Terminer l'appel",
+  "cameraPermissionNeededTitle": "Autorisations pour les appels vocaux/vidéo requises",
+  "cameraPermissionNeeded": "Vous pouvez activer la permission \"Appels vocaux et vidéo\" dans les paramètres de confidentialité.",
+  "unableToCall": "Annulez d'abord votre appel en cours",
+  "unableToCallTitle": "Impossible de démarrer un nouvel appel",
+  "callMissed": "Appel manqué de $name$",
+  "callMissedTitle": "Appel manqué",
+  "noCameraFound": "Aucune caméra trouvée",
+  "noAudioInputFound": "Aucune entrée audio trouvée",
+  "noAudioOutputFound": "Aucune sortie audio trouvée",
+  "callMediaPermissionsTitle": "Appels audio et vidéo",
+  "callMissedCausePermission": "Appel manqué de '$name$' car vous devez activer la permission 'Appels vocaux et vidéo' dans les paramètres de confidentialité.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
+  "callMediaPermissionsDescription": "Autorise l'accès à accepter les appels vocaux et vidéo d'autres utilisateurs",
+  "callMediaPermissionsDialogContent": "La mise en œuvre actuelle des appels vocaux/vidéo exposera votre adresse IP aux serveurs de la Fondation Oxen et aux utilisateurs appelés.",
+  "menuCall": "Appeler",
+  "startedACall": "Vous avez appelé $name$",
+  "answeredACall": "Appel avec $name$"
 }
