--- a/_locales/hu/messages.json
+++ b/_locales/hu/messages.json
@@ -252,9 +252,7 @@
   "userUnbanned": "Felhasználó sikeresen engedélyezve",
   "userUnbanFailed": "Az engedélyzés meghiúsult",
   "banUser": "Felhasználó letiltása",
-  "banUserConfirm": "Are you sure you want to ban user?",
   "banUserAndDeleteAll": "Tiltás és minden törlése",
-  "banUserAndDeleteAllConfirm": "Biztosan ki akarod zárni ezt a felhasználót és törölni az összes üzenetét?",
   "userBanned": "Felhasználó letiltva",
   "userBanFailed": "A kitiltás meghiúsult",
   "leaveGroup": "Csoport elhagyása",
@@ -327,7 +325,7 @@
   "addAsModerator": "Add As Moderator",
   "removeFromModerators": "Eltávolítás a moderátorok listájáról",
   "add": "Hozzáadás",
-  "addingContacts": "Adding contacts to",
+  "addingContacts": "Adding contacts to $name$",
   "noContactsToAdd": "No contacts to add",
   "noMembersInThisGroup": "No other members in this group",
   "noModeratorsToRemove": "no moderators to remove",
@@ -375,7 +373,6 @@
   "openGroupURL": "Open Group URL",
   "enterAnOpenGroupURL": "Enter an open group URL",
   "next": "Tovább",
-  "description": "Description",
   "invalidGroupNameTooShort": "Add meg a csoport nevét",
   "invalidGroupNameTooLong": "Please enter a shorter group name",
   "pickClosedGroupMember": "Please pick at least 1 group member",
@@ -458,6 +455,7 @@
   "noAudioOutputFound": "No audio output found",
   "callMediaPermissionsTitle": "Voice and video calls",
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
   "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
   "menuCall": "Call",
