--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -31,9 +31,9 @@
   "viewMenuToggleDevTools": "開発者ツールを切り替える",
   "contextMenuNoSuggestions": "No Suggestions",
   "openGroupInvitation": "Open group invitation",
-  "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
-  "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ open group?",
-  "enterSessionIDOrONSName": "Enter Session ID or ONS name",
+  "joinOpenGroupAfterInvitationConfirmationTitle": "$roomName$に参加しますか？",
+  "joinOpenGroupAfterInvitationConfirmationDesc": "$roomName$の公開グループに参加しますか？",
+  "enterSessionIDOrONSName": "Session ID か ONS 名を入力してください",
   "loading": "読込中...",
   "optimizingApplication": "アプリケーションを最適化しています...",
   "done": "完了",
@@ -41,14 +41,14 @@
   "view": "見る",
   "youLeftTheGroup": "グループを抜けました",
   "youGotKickedFromGroup": "あなたはこのグループから削除されました",
-  "unreadMessage": "Unread Message",
-  "unreadMessages": "Unread Messages",
+  "unreadMessage": "未読",
+  "unreadMessages": "未読",
   "debugLogExplanation": "このログはネット上に公開され，開発者が閲覧します。提出前に編集することができます。",
   "debugLogError": "アップロードには失敗ありました！手入力でログをバグ報告に付けることを考慮して下さい。",
   "reportIssue": "問題を報告",
   "gotIt": "分かりました",
   "submit": "送信する",
-  "markAllAsRead": "Mark All as Read",
+  "markAllAsRead": "すべて既読にする",
   "incomingError": "受信中にエラー",
   "media": "メディア",
   "mediaEmptyState": "メディアがありません",
@@ -73,7 +73,7 @@
   "attemptingReconnection": "$reconnect_duration_in_seconds$ 秒後に再接続を行います。",
   "submitDebugLog": "デバッグログ",
   "debugLog": "デバッグログ",
-  "showDebugLog": "Show Debug Log",
+  "showDebugLog": "デバッグログを表示",
   "goToReleaseNotes": "リリースノートを閲覧",
   "goToSupportPage": "サポートページへ",
   "menuReportIssue": "バグを報告",
@@ -104,13 +104,13 @@
   "photo": "写真",
   "cannotUpdate": "更新できませんでした",
   "cannotUpdateDetail": "Session Desktop failed to update, but there is a new version available. Please go to https://getsession.org/ and install the new version manually, then either contact support or file a bug about this problem.",
-  "ok": "OK",
+  "ok": "はい",
   "cancel": "キャンセル",
-  "close": "Close",
+  "close": "閉じる",
   "continue": "続行",
   "error": "エラー",
   "delete": "削除",
-  "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
+  "messageDeletionForbidden": "他のユーザーの投稿を削除する権限はありません",
   "deleteJustForMe": "Delete just for me",
   "deleteForEveryone": "Delete for everyone",
   "deleteMessagesQuestion": "Delete those messages?",
@@ -128,7 +128,7 @@
   "resend": "再送",
   "deleteConversationConfirmation": "この会話を完全に消去しますが，よろしいですか？",
   "clearAllData": "すべてのデータを消去する",
-  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
+  "deleteAccountWarning": "メッセージと連絡先が完全に削除されます",
   "deleteContactConfirmation": "この会話を削除してもよろしいですか？",
   "quoteThumbnailAlt": "引用されたメッセージから画像のサムネール",
   "imageAttachmentAlt": "メッセージにイメージを添付する",
@@ -138,10 +138,10 @@
   "addACaption": "キャプション追加...",
   "copy": "コピーする",
   "copySessionID": "Session ID をコピー",
-  "copyOpenGroupURL": "Copy Group's URL",
+  "copyOpenGroupURL": "グループのURLをコピー",
   "save": "保存",
   "saveLogToDesktop": "Save log to desktop",
-  "saved": "Saved",
+  "saved": "保存済み",
   "permissions": "アクセス許可",
   "general": "一般",
   "tookAScreenshot": "$name$ took a screenshot",
@@ -150,10 +150,10 @@
   "linkPreviewDescription": "プレビューはImgur、Instagram、Pinterest、RedditおよびYouTubeリンクをサポートしています",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
   "mediaPermissionsTitle": "Microphone",
-  "mediaPermissionsDescription": "Allow access to microphone",
+  "mediaPermissionsDescription": "マイクへのアクセスを許可する",
   "spellCheckTitle": "スペルチェック",
   "spellCheckDescription": "メッセージボックスに入力されたテキストのスペルチェックを有効にする",
-  "spellCheckDirty": "You must restart Session to apply your new settings",
+  "spellCheckDirty": "新しい設定を適用するために Session を再起動する必要があります",
   "notifications": "通知",
   "readReceiptSettingDescription": "メッセージが読まれた状態の表示と送信をする（すべてのセッションに既読通知を有功にする）。",
   "readReceiptSettingTitle": "既読通知",
@@ -178,7 +178,7 @@
   "timestamp_m": "1分",
   "timestamp_h": "1時間",
   "timestampFormat_M": "MMM D",
-  "messageBodyMissing": "Please enter a message body.",
+  "messageBodyMissing": "メッセージを入力してください",
   "unblockToSend": "この連絡先にメッセージを送るためにブロックを解除する。",
   "unblockGroupToSend": "このグループにメッセージを送信するには、ブロックを解除してください。",
   "youChangedTheTimer": "消えるメッセージの消去時間を$time$に設定しました",
@@ -197,7 +197,7 @@
   "timerOption_1_day": "1日",
   "timerOption_1_week": "1週間",
   "disappearingMessages": "消えるメッセージ",
-  "changeNickname": "Change Nickname",
+  "changeNickname": "ニックネームを変更",
   "clearNickname": "Clear nickname",
   "nicknamePlaceholder": "新しいニックネーム",
   "changeNicknameMessage": "Enter a nickname for this user",
@@ -252,9 +252,7 @@
   "userUnbanned": "User unbanned successfully",
   "userUnbanFailed": "Unban failed!",
   "banUser": "Ban User",
-  "banUserConfirm": "Are you sure you want to ban user?",
   "banUserAndDeleteAll": "Ban and Delete All",
-  "banUserAndDeleteAllConfirm": "Are you sure you want to ban the user and delete all his messages?",
   "userBanned": "User banned successfully",
   "userBanFailed": "Ban failed!",
   "leaveGroup": "グループを抜ける",
@@ -266,32 +264,32 @@
   "noContactsForGroup": "まだ連絡先がありません",
   "failedToAddAsModerator": "Failed to add user as moderator",
   "failedToRemoveFromModerator": "Failed to remove user from the moderator list",
-  "copyMessage": "Copy message text",
+  "copyMessage": "メッセージをコピー",
   "selectMessage": "メッセージを選択",
   "editGroup": "グループを編集する",
-  "editGroupName": "Edit group name",
+  "editGroupName": "グループ名を編集",
   "updateGroupDialogTitle": "$name$を更新中...",
   "showRecoveryPhrase": "リカバリーフレーズ",
   "yourSessionID": "あなたの Session ID",
   "setAccountPasswordTitle": "アカウントのパスワード設定",
   "setAccountPasswordDescription": "Session のスクリーンのロック解除にパスワードを要求する。スクリーンロック中にもメッセージの通知が受信できます。Session の通知設定でメッセージの通知に表示される情報を調整できます。",
-  "changeAccountPasswordTitle": "Change Account Password",
-  "changeAccountPasswordDescription": "Change your password",
-  "removeAccountPasswordTitle": "Remove Account Password",
-  "removeAccountPasswordDescription": "Remove the password associated with your account",
-  "enterPassword": "Please enter your password",
+  "changeAccountPasswordTitle": "パスワードの変更",
+  "changeAccountPasswordDescription": "パスワードを変更する",
+  "removeAccountPasswordTitle": "パスワードの削除",
+  "removeAccountPasswordDescription": "このアカウントに設定されているパスワードを削除します",
+  "enterPassword": "パスワードを入力してください",
   "confirmPassword": "Confirm password",
   "pasteLongPasswordToastTitle": "The clipboard content exceeds the maximum password length of $max_pwd_len$ characters.",
   "showRecoveryPhrasePasswordRequest": "Please enter your password",
   "recoveryPhraseSavePromptMain": "リカバリーフレーズは、Session ID のマスターキーです。端末にアクセスできなくなった場合、これを使用して Session ID を復元できます。リカバリーフレーズを安全な場所に保管し、誰にも教えないでください。",
-  "invalidOpenGroupUrl": "Invalid URL",
+  "invalidOpenGroupUrl": "URL が無効です",
   "copiedToClipboard": "クリップボードにコピーされました",
   "passwordViewTitle": "パスワード入力",
   "unlock": "ロック解除",
   "password": "パスワード",
-  "setPassword": "Set Password",
-  "changePassword": "Change Password",
-  "removePassword": "Remove Password",
+  "setPassword": "パスワードを設定",
+  "changePassword": "パスワードを変更",
+  "removePassword": "パスワードを削除",
   "maxPasswordAttempts": "Invalid Password. Would you like to reset the database?",
   "typeInOldPassword": "Please type in your old password",
   "invalidOldPassword": "Old password is invalid",
@@ -310,7 +308,7 @@
   "publicChatExists": "You are already connected to this open group",
   "connectToServerFail": "グループに参加できませんでした",
   "connectingToServer": "接続中...",
-  "connectToServerSuccess": "Successfully connected to open group",
+  "connectToServerSuccess": "オープングループに参加しました",
   "setPasswordFail": "Failed to set password",
   "passwordLengthError": "パスワードの長さを6文字から64文字にしてください",
   "passwordTypeError": "パスワードは文字列でなければいけません",
@@ -327,8 +325,8 @@
   "addAsModerator": "Add As Moderator",
   "removeFromModerators": "Remove From Moderators",
   "add": "追加",
-  "addingContacts": "Adding contacts to",
-  "noContactsToAdd": "No contacts to add",
+  "addingContacts": "連絡先を追加",
+  "noContactsToAdd": "追加できる連絡先がありません",
   "noMembersInThisGroup": "No other members in this group",
   "noModeratorsToRemove": "no moderators to remove",
   "onlyAdminCanRemoveMembers": "You are not the creator",
@@ -375,7 +373,6 @@
   "openGroupURL": "グループの URL を開く",
   "enterAnOpenGroupURL": "公開グループの URL を入力する",
   "next": "進む",
-  "description": "Description",
   "invalidGroupNameTooShort": "グループ名を入力してください",
   "invalidGroupNameTooLong": "短いグループ名を入力してください",
   "pickClosedGroupMember": "グループメンバーを少なくとも 2 人選択してください",
@@ -384,8 +381,8 @@
   "userAddedToModerators": "User added to moderator list",
   "userRemovedFromModerators": "User removed from moderator list",
   "orJoinOneOfThese": "Or join one of these...",
-  "helpUsTranslateSession": "Help us Translate Session",
-  "translation": "Translation",
+  "helpUsTranslateSession": "Sessionの翻訳にご協力ください",
+  "translation": "翻訳する",
   "closedGroupInviteFailTitle": "Group Invitation Failed",
   "closedGroupInviteFailTitlePlural": "Group Invitations Failed",
   "closedGroupInviteFailMessage": "Unable to successfully invite a group member",
@@ -458,6 +455,7 @@
   "noAudioOutputFound": "No audio output found",
   "callMediaPermissionsTitle": "Voice and video calls",
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
   "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
   "menuCall": "Call",
