--- a/_locales/nl/messages.json
+++ b/_locales/nl/messages.json
@@ -252,9 +252,7 @@
   "userUnbanned": "Gebruiker gedeblokkeerd",
   "userUnbanFailed": "Deblokkeren mislukt!",
   "banUser": "Gebruiker uitsluiten",
-  "banUserConfirm": "Are you sure you want to ban user?",
   "banUserAndDeleteAll": "Blokkeer en verwijder alles",
-  "banUserAndDeleteAllConfirm": "Weet je zeker dat je de gebruiker wilt verbieden en al zijn berichten wilt verwijderen?",
   "userBanned": "User banned successfully",
   "userBanFailed": "Blokkeren mislukt!",
   "leaveGroup": "Verlaat groep",
@@ -375,7 +373,6 @@
   "openGroupURL": "Open Groep-URL openen",
   "enterAnOpenGroupURL": "Voer een open groep URL in",
   "next": "Volgende",
-  "description": "Description",
   "invalidGroupNameTooShort": "Vul een groepsnaam in",
   "invalidGroupNameTooLong": "Vul a. u. b een kortere groepsnaam in",
   "pickClosedGroupMember": "Kies ten minste één groepslid",
@@ -458,6 +455,7 @@
   "noAudioOutputFound": "No audio output found",
   "callMediaPermissionsTitle": "Voice and video calls",
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
   "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
   "menuCall": "Call",
