--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -73,7 +73,7 @@
   "attemptingReconnection": "Ponowne połączenie za $reconnect_duration_in_seconds$ sekund(-y)",
   "submitDebugLog": "Wyślij log debugowania",
   "debugLog": "Dziennik Debugowania",
-  "showDebugLog": "Show Debug Log",
+  "showDebugLog": "Pokaż logi debugowania",
   "goToReleaseNotes": "Przejdź do informacji o wersji",
   "goToSupportPage": "Przejdź do strony wsparcia",
   "menuReportIssue": "Zgłoś problem",
@@ -112,9 +112,9 @@
   "delete": "Usuń",
   "messageDeletionForbidden": "Nie masz uprawnień do usunięcia wiadomości innych",
   "deleteJustForMe": "Usuń tylko dla mnie",
-  "deleteForEveryone": "Delete for everyone",
-  "deleteMessagesQuestion": "Delete those messages?",
-  "deleteMessageQuestion": "Delete this message?",
+  "deleteForEveryone": "Usuń dla wszystkich",
+  "deleteMessagesQuestion": "Usunąć te wiadomości?",
+  "deleteMessageQuestion": "Usunąć tę wiadomość?",
   "deleteMessages": "Usuń konwersację",
   "deleted": "Usunięte",
   "messageDeletedPlaceholder": "Ta wiadomość została usunięta",
@@ -140,7 +140,7 @@
   "copySessionID": "Skopiuj Session ID",
   "copyOpenGroupURL": "Skopiuj adres URL grupy",
   "save": "Zapisz",
-  "saveLogToDesktop": "Save log to desktop",
+  "saveLogToDesktop": "Zapisz logi na pulpicie",
   "saved": "Zapisano",
   "permissions": "Uprawnienia",
   "general": "Ogólne",
@@ -149,8 +149,8 @@
   "linkPreviewsTitle": "Podgląd linków",
   "linkPreviewDescription": "Previews are supported for most urls.",
   "linkPreviewsConfirmMessage": "Pełna ochrona metadanych nie będzie dostępna podczas wysyłania podglądu.",
-  "mediaPermissionsTitle": "Microphone",
-  "mediaPermissionsDescription": "Allow access to microphone",
+  "mediaPermissionsTitle": "Mikrofon",
+  "mediaPermissionsDescription": "Zezwalaj na dostęp do mikrofonu",
   "spellCheckTitle": "Sprawdzanie pisowni",
   "spellCheckDescription": "Włącz sprawdzanie pisowni podczas pisania wiadomości",
   "spellCheckDirty": "Musisz zrestartować Session, aby zastosować nowe ustawienia",
@@ -252,9 +252,7 @@
   "userUnbanned": "Użytkownik odbanowany pomyślnie",
   "userUnbanFailed": "Odbanowanie nie powiodło się!",
   "banUser": "Zbanuj użytkownika",
-  "banUserConfirm": "Are you sure you want to ban user?",
   "banUserAndDeleteAll": "Zbanuj i usuń wszystko",
-  "banUserAndDeleteAllConfirm": "Czy na pewno chcesz zbanować użytkownika i usunąć wszystkie jego wiadomości?",
   "userBanned": "User banned successfully",
   "userBanFailed": "Ban nieudany!",
   "leaveGroup": "Opuść grupę",
@@ -375,7 +373,6 @@
   "openGroupURL": "Otwórz adres URL grupy",
   "enterAnOpenGroupURL": "Wprowadź adres URL otwartej grupy",
   "next": "Dalej",
-  "description": "Description",
   "invalidGroupNameTooShort": "Wpisz nazwę grupy",
   "invalidGroupNameTooLong": "Wprowadź krótszą nazwę grupy",
   "pickClosedGroupMember": "Proszę wybrać co najmniej 1 członka grupy",
@@ -416,7 +413,7 @@
   "unpinConversation": "Odepnij konwersację",
   "pinConversationLimitTitle": "Limit przypiętych konwersacji",
   "pinConversationLimitToastDescription": "Możesz przypiąć tylko $number$ konwersacji",
-  "showUserDetails": "Show User Details",
+  "showUserDetails": "Pokaż szczegóły użytkownika",
   "latestUnreadIsAbove": "Pierwsza nieprzeczytana wiadomość jest powyżej",
   "sendRecoveryPhraseTitle": "Wysyłanie frazy odzyskiwania",
   "sendRecoveryPhraseMessage": "Próbujesz wysłać frazę odzyskiwania, która może być użyta do uzyskania dostępu do twojego konta. Czy na pewno chcesz wysłać tę wiadomość?",
@@ -436,31 +433,32 @@
   "notificationSubtitle": "Powiadomienia - $setting$",
   "surveyTitle": "Weź udział w ankiecie Session",
   "goToOurSurvey": "Przejdź do naszej ankiety",
-  "blockAll": "Block All",
-  "messageRequests": "Message Requests",
-  "requestsSubtitle": "Pending Requests",
-  "requestsPlaceholder": "No requests",
-  "messageRequestsDescription": "Enable Message Request Inbox",
-  "incomingCallFrom": "Incoming call from '$name$'",
-  "ringing": "Ringing...",
-  "establishingConnection": "Establishing connection...",
+  "blockAll": "Zablokuj wszystko",
+  "messageRequests": "Żądania wiadomości",
+  "requestsSubtitle": "Oczekujące Prośby",
+  "requestsPlaceholder": "Brak zapytań",
+  "messageRequestsDescription": "Włącz skrzynkę odbiorczą żądanych wiadomości",
+  "incomingCallFrom": "Połączenie przychodzące od '$name$'",
+  "ringing": "Dzwonienie...",
+  "establishingConnection": "Nawiązywanie połączenia...",
   "accept": "Akceptuj",
   "decline": "Odrzuć",
   "endCall": "Zakończ rozmowę",
-  "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
-  "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
-  "unableToCall": "Cancel your ongoing call first",
+  "cameraPermissionNeededTitle": "Wymagane uprawnienia do połączeń głosowych/wideo",
+  "cameraPermissionNeeded": "Możesz włączyć uprawnienie 'Połączenia głosowe i wideo' w Ustawieniach Prywatności.",
+  "unableToCall": "Najpierw anuluj bieżące połączenie",
   "unableToCallTitle": "Nie można rozpocząć nowego połączenia",
   "callMissed": "Nieodebrane połączenie od $name$",
   "callMissedTitle": "Połączenie nieodebrane",
   "noCameraFound": "Nie znaleziono kamery",
   "noAudioInputFound": "Nie znaleziono wejścia dźwięku",
-  "noAudioOutputFound": "No audio output found",
-  "callMediaPermissionsTitle": "Voice and video calls",
-  "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
-  "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
-  "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
-  "menuCall": "Call",
-  "startedACall": "You called $name$",
-  "answeredACall": "Call with $name$"
+  "noAudioOutputFound": "Nie znaleziono wyjścia dźwięku",
+  "callMediaPermissionsTitle": "Połączenia głosowe i wideo",
+  "callMissedCausePermission": "Połączenie nieodebrane od '$name$' ponieważ musisz włączyć uprawnienie 'Połączenia głosowe i wideo' w Ustawieniach Prywatności.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
+  "callMediaPermissionsDescription": "Zezwala na dostęp do przyjmowania połączeń głosowych i wideo od innych użytkowników",
+  "callMediaPermissionsDialogContent": "Obecna implementacja połączeń głosowych/wideo wyświetli Twój adres IP na serwerach Fundacji Oxen i użytkownikowi do którego dzwonisz/dzwoni.",
+  "menuCall": "Zadzwoń",
+  "startedACall": "Zadzwoniłeś/aś do $name$",
+  "answeredACall": "Połączenie z $name$"
 }
