--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -252,9 +252,7 @@
   "userUnbanned": "Usuário desbanido com sucesso",
   "userUnbanFailed": "Desbanimento falhou!",
   "banUser": "Banir usuário",
-  "banUserConfirm": "Are you sure you want to ban user?",
   "banUserAndDeleteAll": "Banir e Excluir Tudo",
-  "banUserAndDeleteAllConfirm": "Tem certeza de que deseja bloquear o usuário e excluir todas suas mensagens?",
   "userBanned": "User banned successfully",
   "userBanFailed": "Banimento falhou!",
   "leaveGroup": "Sair Do Grupo",
@@ -375,7 +373,6 @@
   "openGroupURL": "URL do grupo aberto",
   "enterAnOpenGroupURL": "Digite a URL do grupo aberto",
   "next": "Avançar",
-  "description": "Description",
   "invalidGroupNameTooShort": "Digite um nome de grupo",
   "invalidGroupNameTooLong": "Digite um nome de grupo mais curto",
   "pickClosedGroupMember": "Escolha pelo menos 2 membros do grupo",
@@ -458,6 +455,7 @@
   "noAudioOutputFound": "No audio output found",
   "callMediaPermissionsTitle": "Voice and video calls",
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
   "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
   "menuCall": "Call",
