--- a/_locales/ro/messages.json
+++ b/_locales/ro/messages.json
@@ -252,9 +252,7 @@
   "userUnbanned": "Utilizator debanat cu succes",
   "userUnbanFailed": "Ridicarea accesului anulată!",
   "banUser": "Banează utilizator",
-  "banUserConfirm": "Are you sure you want to ban user?",
   "banUserAndDeleteAll": "Interzice și șterge toate",
-  "banUserAndDeleteAllConfirm": "Sunteţi sigur că doriţi să blocaţi utilizatorul şi să ştergeţi toate mesajele lui?",
   "userBanned": "User banned successfully",
   "userBanFailed": "Interdicţie eșuată!",
   "leaveGroup": "Părăsește grupul",
@@ -327,7 +325,7 @@
   "addAsModerator": "Add As Moderator",
   "removeFromModerators": "Remove From Moderators",
   "add": "Add",
-  "addingContacts": "Adding contacts to",
+  "addingContacts": "Adding contacts to $name$",
   "noContactsToAdd": "No contacts to add",
   "noMembersInThisGroup": "No other members in this group",
   "noModeratorsToRemove": "no moderators to remove",
@@ -375,7 +373,6 @@
   "openGroupURL": "Deschide URL-ul grupului",
   "enterAnOpenGroupURL": "Introduceți o adresă URL a grupului descchis",
   "next": "Următorul",
-  "description": "Description",
   "invalidGroupNameTooShort": "Te rugăm să introduci un nume de grup",
   "invalidGroupNameTooLong": "Te rugăm să introduci un nume de grup mai scurt",
   "pickClosedGroupMember": "Te rugăm să alegi cel puțin un membru al grupului",
@@ -458,6 +455,7 @@
   "noAudioOutputFound": "No audio output found",
   "callMediaPermissionsTitle": "Voice and video calls",
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
   "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
   "menuCall": "Call",
