--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -73,7 +73,7 @@
   "attemptingReconnection": "Попытка переподключения через $reconnect_duration_in_seconds$ секунд",
   "submitDebugLog": "Журнал отладки",
   "debugLog": "Журнал отладки",
-  "showDebugLog": "Show Debug Log",
+  "showDebugLog": "Показать Журнал Отладки",
   "goToReleaseNotes": "Перейти к заметкам о релизе",
   "goToSupportPage": "Перейти на страницу поддержки",
   "menuReportIssue": "Сообщить о проблеме",
@@ -111,10 +111,10 @@
   "error": "Ошибка",
   "delete": "Удалить",
   "messageDeletionForbidden": "У вас недостаточно прав для удаления чужих сообщений",
-  "deleteJustForMe": "Удалить только у меня",
-  "deleteForEveryone": "Delete for everyone",
-  "deleteMessagesQuestion": "Delete those messages?",
-  "deleteMessageQuestion": "Delete this message?",
+  "deleteJustForMe": "Удалить только для меня",
+  "deleteForEveryone": "Удалить для всех",
+  "deleteMessagesQuestion": "Удалить эти сообщения?",
+  "deleteMessageQuestion": "Удалить это сообщение?",
   "deleteMessages": "Удалить сообщения",
   "deleted": "Удалено",
   "messageDeletedPlaceholder": "Это сообщение было удалено",
@@ -140,7 +140,7 @@
   "copySessionID": "Копировать Session ID",
   "copyOpenGroupURL": "Копировать URL группы",
   "save": "Сохранить",
-  "saveLogToDesktop": "Save log to desktop",
+  "saveLogToDesktop": "Сохранить журнал на компьютер",
   "saved": "Сохранено",
   "permissions": "Разрешения",
   "general": "Общие",
@@ -149,8 +149,8 @@
   "linkPreviewsTitle": "Отправлять предпросмотр ссылки",
   "linkPreviewDescription": "Предпросмотр доступен для большинства URL",
   "linkPreviewsConfirmMessage": "У вас не будет полной защиты метаданных при отправке предварительного просмотра ссылок.",
-  "mediaPermissionsTitle": "Microphone",
-  "mediaPermissionsDescription": "Allow access to microphone",
+  "mediaPermissionsTitle": "Микрофон",
+  "mediaPermissionsDescription": "Разрешить доступ к микрофону",
   "spellCheckTitle": "Проверка орфографии",
   "spellCheckDescription": "Включить проверку орфографии текста, введенного в поле создания сообщения",
   "spellCheckDirty": "Вы должны перезапустить Session, чтобы применить новые настройки",
@@ -252,9 +252,7 @@
   "userUnbanned": "Пользователь успешно разблокирован",
   "userUnbanFailed": "Не удалось разблокировать!",
   "banUser": "Заблокировать пользователя",
-  "banUserConfirm": "Вы уверены, что хотите заблокировать пользователя?",
   "banUserAndDeleteAll": "Заблокировать и удалить все",
-  "banUserAndDeleteAllConfirm": "Вы уверены, что хотите заблокировать пользователя и удалить все его сообщения?",
   "userBanned": "Пользователь заблокирован",
   "userBanFailed": "Не удалось заблокировать!",
   "leaveGroup": "Покинуть группу",
@@ -375,7 +373,6 @@
   "openGroupURL": "URL открытой группы",
   "enterAnOpenGroupURL": "Введите URL открытой группы",
   "next": "Далее",
-  "description": "Description",
   "invalidGroupNameTooShort": "Пожалуйста, введите название группы",
   "invalidGroupNameTooLong": "Пожалуйста, введите более короткое название группы",
   "pickClosedGroupMember": "Пожалуйста, выберите как минимум 1 участника группы",
@@ -416,7 +413,7 @@
   "unpinConversation": "Открепить беседу",
   "pinConversationLimitTitle": "Лимит закрепленных бесед",
   "pinConversationLimitToastDescription": "Вы можете закрепить только $number$ бесед",
-  "showUserDetails": "Show User Details",
+  "showUserDetails": "Показывать Сведения о Пользователе",
   "latestUnreadIsAbove": "Первое непрочитанное сообщение находится выше",
   "sendRecoveryPhraseTitle": "Отправка секретной фразы",
   "sendRecoveryPhraseMessage": "Вы пытаетесь отправить вашу секретную фразу, которая может быть использована для доступа к вашей учетной записи. Вы уверены, что хотите отправить это сообщение?",
@@ -436,31 +433,32 @@
   "notificationSubtitle": "Уведомления - $setting$",
   "surveyTitle": "Пройдите наш опрос о Session",
   "goToOurSurvey": "Перейти к опросу",
-  "blockAll": "Block All",
-  "messageRequests": "Message Requests",
-  "requestsSubtitle": "Pending Requests",
-  "requestsPlaceholder": "No requests",
+  "blockAll": "Блокировать все",
+  "messageRequests": "Запросы Сообщений",
+  "requestsSubtitle": "Ожидающие рассмотрения запросы",
+  "requestsPlaceholder": "Нет запросов",
   "messageRequestsDescription": "Enable Message Request Inbox",
-  "incomingCallFrom": "Incoming call from '$name$'",
-  "ringing": "Ringing...",
-  "establishingConnection": "Establishing connection...",
+  "incomingCallFrom": "Входящий звонок от '$name$'",
+  "ringing": "Вызов...",
+  "establishingConnection": "Установление соединения...",
   "accept": "Принять",
   "decline": "Отклонить",
   "endCall": "Завершить вызов",
-  "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
-  "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
-  "unableToCall": "Cancel your ongoing call first",
+  "cameraPermissionNeededTitle": "Требуются разрешения для Голосовых/Видеозвонков",
+  "cameraPermissionNeeded": "Вы можете включить разрешение 'Голосовые и видеозвонки' в настройках Конфиденциальности.",
+  "unableToCall": "Сначала отмените свой текущий вызов",
   "unableToCallTitle": "Не удается начать новый вызов",
   "callMissed": "Пропущенный вызов от $name$",
   "callMissedTitle": "Пропущен вызов",
   "noCameraFound": "Камера не найдена",
   "noAudioInputFound": "Аудиовход не найден",
-  "noAudioOutputFound": "No audio output found",
-  "callMediaPermissionsTitle": "Voice and video calls",
-  "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
-  "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
-  "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
-  "menuCall": "Call",
-  "startedACall": "You called $name$",
-  "answeredACall": "Call with $name$"
+  "noAudioOutputFound": "Аудиовыход не найден",
+  "callMediaPermissionsTitle": "Голосовые и видеозвонки",
+  "callMissedCausePermission": "Пропущенный вызов от '$name$' потому что вам необходимо включить разрешение 'Голосовые и видеозвонки' в настройках Конфиденциальности.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
+  "callMediaPermissionsDescription": "Позволять принимать голосовые и видеозвонки от других пользователей",
+  "callMediaPermissionsDialogContent": "Текущая реализация голосовых/видеозвонков предоставит ваш IP-адрес серверам Oxen Foundation и вызывающему/вызываемому пользователю.",
+  "menuCall": "Вызов",
+  "startedACall": "Вы звоните $name$",
+  "answeredACall": "Звонок с $name$"
 }
