--- a/_locales/sr/messages.json
+++ b/_locales/sr/messages.json
@@ -252,9 +252,7 @@
   "userUnbanned": "Korisnik je uspešno odblokiran",
   "userUnbanFailed": "Nesupešno!",
   "banUser": "Zabrani korisnika",
-  "banUserConfirm": "Are you sure you want to ban user?",
   "banUserAndDeleteAll": "Zabrani i izbriši sve",
-  "banUserAndDeleteAllConfirm": "Jeste li sigurni da želite zabraniti korisnika i izbrišete sve njegove poruke?",
   "userBanned": "User banned successfully",
   "userBanFailed": "Zabrana nije uspela!",
   "leaveGroup": "Napusti grupu",
@@ -375,7 +373,6 @@
   "openGroupURL": "URL otvorene grupe",
   "enterAnOpenGroupURL": "Unesite URL otvorene grupe",
   "next": "Dalje",
-  "description": "Description",
   "invalidGroupNameTooShort": "Unesite naziv grupe",
   "invalidGroupNameTooLong": "Unesite kraći naziv grupe",
   "pickClosedGroupMember": "Molimo izaberite najmanje jednog člana grupe",
@@ -458,6 +455,7 @@
   "noAudioOutputFound": "No audio output found",
   "callMediaPermissionsTitle": "Voice and video calls",
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
   "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
   "menuCall": "Call",
