--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -73,7 +73,7 @@
   "attemptingReconnection": "在 $reconnect_duration_in_seconds$ 秒后尝试重新连接",
   "submitDebugLog": "调试日志",
   "debugLog": "调试日志",
-  "showDebugLog": "Show Debug Log",
+  "showDebugLog": "显示调试日志",
   "goToReleaseNotes": "前往发布说明",
   "goToSupportPage": "前往支持页面",
   "menuReportIssue": "反馈问题",
@@ -252,9 +252,7 @@
   "userUnbanned": "用户解封成功",
   "userUnbanFailed": "解封失败！",
   "banUser": "封禁用户",
-  "banUserConfirm": "Are you sure you want to ban user?",
   "banUserAndDeleteAll": "屏蔽并全部删除",
-  "banUserAndDeleteAllConfirm": "您确定要屏蔽联系人并删除他的所有消息吗？",
   "userBanned": "User banned successfully",
   "userBanFailed": "封禁失败！",
   "leaveGroup": "离开群聊",
@@ -375,7 +373,6 @@
   "openGroupURL": "公开群组链接",
   "enterAnOpenGroupURL": "输入公开群组链接",
   "next": "下一步",
-  "description": "Description",
   "invalidGroupNameTooShort": "请输入群组名称",
   "invalidGroupNameTooLong": "请输入较短的群组名称",
   "pickClosedGroupMember": "请选择至少一名群组成员",
@@ -442,7 +439,7 @@
   "requestsPlaceholder": "No requests",
   "messageRequestsDescription": "Enable Message Request Inbox",
   "incomingCallFrom": "Incoming call from '$name$'",
-  "ringing": "Ringing...",
+  "ringing": "响铃中...",
   "establishingConnection": "Establishing connection...",
   "accept": "接受",
   "decline": "拒绝",
@@ -458,6 +455,7 @@
   "noAudioOutputFound": "No audio output found",
   "callMediaPermissionsTitle": "Voice and video calls",
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
   "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
   "menuCall": "Call",
