--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -252,9 +252,7 @@
   "userUnbanned": "已解除封鎖用戶",
   "userUnbanFailed": "解除封鎖失敗！",
   "banUser": "封鎖用戶",
-  "banUserConfirm": "Are you sure you want to ban user?",
   "banUserAndDeleteAll": "封鎖並刪除所有",
-  "banUserAndDeleteAllConfirm": "您要封鎖該用戶並刪除其所有訊息嗎？",
   "userBanned": "User banned successfully",
   "userBanFailed": "封鎖失敗！",
   "leaveGroup": "離開群組",
@@ -327,7 +325,7 @@
   "addAsModerator": "Add As Moderator",
   "removeFromModerators": "Remove From Moderators",
   "add": "Add",
-  "addingContacts": "Adding contacts to",
+  "addingContacts": "Adding contacts to $name$",
   "noContactsToAdd": "No contacts to add",
   "noMembersInThisGroup": "No other members in this group",
   "noModeratorsToRemove": "no moderators to remove",
@@ -375,7 +373,6 @@
   "openGroupURL": "Open Group URL",
   "enterAnOpenGroupURL": "Enter an open group URL",
   "next": "Next",
-  "description": "Description",
   "invalidGroupNameTooShort": "Please enter a group name",
   "invalidGroupNameTooLong": "Please enter a shorter group name",
   "pickClosedGroupMember": "Please pick at least 1 group member",
@@ -458,6 +455,7 @@
   "noAudioOutputFound": "No audio output found",
   "callMediaPermissionsTitle": "Voice and video calls",
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
   "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
   "menuCall": "Call",
