--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -460,6 +460,5 @@
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
   "menuCall": "Call",
   "startedACall": "You called $name$",
-  "answeredACall": "Call with $name$",
-  "banAndDeleteAllDialogTitle": "Ban and Delete All Messages Confirmation"
+  "answeredACall": "Call with $name$"
 }
