--- a/_locales/id/messages.json
+++ b/_locales/id/messages.json
@@ -252,9 +252,7 @@
   "userUnbanned": "User unbanned successfully",
   "userUnbanFailed": "Unban failed!",
   "banUser": "Ban User",
-  "banUserConfirm": "Are you sure you want to ban user?",
   "banUserAndDeleteAll": "Ban and Delete All",
-  "banUserAndDeleteAllConfirm": "Are you sure you want to ban the user and delete all his messages?",
   "userBanned": "User banned successfully",
   "userBanFailed": "Ban failed!",
   "leaveGroup": "Keluar grup",
@@ -327,7 +325,7 @@
   "addAsModerator": "Add As Moderator",
   "removeFromModerators": "Remove From Moderators",
   "add": "Add",
-  "addingContacts": "Adding contacts to",
+  "addingContacts": "Adding contacts to $name$",
   "noContactsToAdd": "No contacts to add",
   "noMembersInThisGroup": "No other members in this group",
   "noModeratorsToRemove": "no moderators to remove",
@@ -375,7 +373,6 @@
   "openGroupURL": "Buka URL grup",
   "enterAnOpenGroupURL": "Masukkan sebuah URL grup terbuka",
   "next": "Berikutnya",
-  "description": "Description",
   "invalidGroupNameTooShort": "Masukkan nama grup",
   "invalidGroupNameTooLong": "Masukkan nama grup yang lebih pendek",
   "pickClosedGroupMember": "Pilih setidaknya 2 anggota grup",
@@ -458,6 +455,7 @@
   "noAudioOutputFound": "No audio output found",
   "callMediaPermissionsTitle": "Voice and video calls",
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
   "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
   "menuCall": "Call",
