--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -73,7 +73,7 @@
   "attemptingReconnection": "Tentativo di riconessione tra $reconnect_duration_in_seconds$ secondi.",
   "submitDebugLog": "Log di debug",
   "debugLog": "Log di debug",
-  "showDebugLog": "Show Debug Log",
+  "showDebugLog": "Mostra Log Di Debug",
   "goToReleaseNotes": "Vai alle note di rilascio",
   "goToSupportPage": "Vai alla pagina di supporto",
   "menuReportIssue": "Segnala un problema",
@@ -112,9 +112,9 @@
   "delete": "Cancella",
   "messageDeletionForbidden": "Non hai il permesso di eliminare i messaggi degli altri",
   "deleteJustForMe": "Elimina solo per me",
-  "deleteForEveryone": "Delete for everyone",
-  "deleteMessagesQuestion": "Delete those messages?",
-  "deleteMessageQuestion": "Delete this message?",
+  "deleteForEveryone": "Elimina per tutti",
+  "deleteMessagesQuestion": "Eliminare questi messaggi?",
+  "deleteMessageQuestion": "Cancellare questo messaggio?",
   "deleteMessages": "Elimina messaggi",
   "deleted": "Eliminata",
   "messageDeletedPlaceholder": "Questo messaggio è stato eliminato",
@@ -140,7 +140,7 @@
   "copySessionID": "Copia Session ID",
   "copyOpenGroupURL": "Copia L'Url Del Gruppo",
   "save": "Salva",
-  "saveLogToDesktop": "Save log to desktop",
+  "saveLogToDesktop": "Salva log sul desktop",
   "saved": "Salvato",
   "permissions": "Permessi",
   "general": "Generale",
@@ -149,8 +149,8 @@
   "linkPreviewsTitle": "Invia Anteprime Dei Link",
   "linkPreviewDescription": "Previews are supported for most urls.",
   "linkPreviewsConfirmMessage": "Non avrai la protezione completa dei metadati quando invierai le anteprime dei link.",
-  "mediaPermissionsTitle": "Microphone",
-  "mediaPermissionsDescription": "Allow access to microphone",
+  "mediaPermissionsTitle": "Microfono",
+  "mediaPermissionsDescription": "Autorizza l'accesso al microfono",
   "spellCheckTitle": "Controllo ortografico",
   "spellCheckDescription": "Abilita il controllo ortografico del testo inserito nella casella di composizione",
   "spellCheckDirty": "È necessario riavviare Session per applicare le modifiche",
@@ -252,9 +252,7 @@
   "userUnbanned": "Utente sbloccato con successo",
   "userUnbanFailed": "Sblocco fallito!",
   "banUser": "Banna utente",
-  "banUserConfirm": "Are you sure you want to ban user?",
   "banUserAndDeleteAll": "Banna ed elimina tutto",
-  "banUserAndDeleteAllConfirm": "Sei sicuro di voler bannare l'utente ed eliminare tutti i suoi messaggi?",
   "userBanned": "User banned successfully",
   "userBanFailed": "Ban fallito!",
   "leaveGroup": "Abbandona Il Gruppo",
@@ -375,7 +373,6 @@
   "openGroupURL": "Apri l'URL del gruppo",
   "enterAnOpenGroupURL": "Inserisci l'URL di un gruppo aperto",
   "next": "Avanti",
-  "description": "Description",
   "invalidGroupNameTooShort": "Inserisci un nome per il gruppo",
   "invalidGroupNameTooLong": "Inserisci un nome gruppo più breve",
   "pickClosedGroupMember": "Scegli almeno 2 membri del gruppo",
@@ -416,7 +413,7 @@
   "unpinConversation": "Rimuovi conversazione",
   "pinConversationLimitTitle": "Limite conversazioni fissate",
   "pinConversationLimitToastDescription": "Puoi fissare solo $number$ conversazioni",
-  "showUserDetails": "Show User Details",
+  "showUserDetails": "Mostra Dettagli Utente",
   "latestUnreadIsAbove": "Il primo messaggio non letto è sopra",
   "sendRecoveryPhraseTitle": "Invio Frase Di Recupero",
   "sendRecoveryPhraseMessage": "Stai tentando di inviare la frase di recupero che può essere utilizzata per accedere al tuo account. Sei sicuro di voler inviare questo messaggio?",
@@ -436,31 +433,32 @@
   "notificationSubtitle": "Notifiche - $setting$",
   "surveyTitle": "Fai il nostro sondaggio di Session",
   "goToOurSurvey": "Vai al sondaggio",
-  "blockAll": "Block All",
-  "messageRequests": "Message Requests",
-  "requestsSubtitle": "Pending Requests",
-  "requestsPlaceholder": "No requests",
-  "messageRequestsDescription": "Enable Message Request Inbox",
-  "incomingCallFrom": "Incoming call from '$name$'",
-  "ringing": "Ringing...",
-  "establishingConnection": "Establishing connection...",
+  "blockAll": "Blocca Tutti",
+  "messageRequests": "Richieste Di Messaggio",
+  "requestsSubtitle": "Richieste in Attesa",
+  "requestsPlaceholder": "Nessuna richiesta",
+  "messageRequestsDescription": "Abilita Messaggio Richiesta In Arrivo",
+  "incomingCallFrom": "Chiamata in arrivo da '$name$'",
+  "ringing": "Squilla...",
+  "establishingConnection": "Connessione in corso...",
   "accept": "Accetta",
   "decline": "Rifiuta",
   "endCall": "Termina chiamata",
-  "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
-  "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
-  "unableToCall": "Cancel your ongoing call first",
+  "cameraPermissionNeededTitle": "Autorizzazioni di chiamata vocale/video richieste",
+  "cameraPermissionNeeded": "È possibile abilitare l'autorizzazione 'Voce e videochiamate' nelle Impostazioni Privacy.",
+  "unableToCall": "Annulla prima la tua chiamata in corso",
   "unableToCallTitle": "Impossibile avviare una nuova chiamata",
   "callMissed": "Chiamata persa da $name$",
   "callMissedTitle": "Chiamata persa",
   "noCameraFound": "Nessuna fotocamera è stata trovata",
   "noAudioInputFound": "Nessun ingresso audio trovato",
-  "noAudioOutputFound": "No audio output found",
-  "callMediaPermissionsTitle": "Voice and video calls",
-  "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
-  "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
-  "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
-  "menuCall": "Call",
-  "startedACall": "You called $name$",
-  "answeredACall": "Call with $name$"
+  "noAudioOutputFound": "Nessuna uscita audio trovata",
+  "callMediaPermissionsTitle": "Chiamate vocali e video",
+  "callMissedCausePermission": "Chiamata persa da '$name$' perché è necessario abilitare l'autorizzazione 'Voce e videochiamate' nelle Impostazioni Privacy.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
+  "callMediaPermissionsDescription": "Consente l'accesso per accettare chiamate vocali e video da altri utenti",
+  "callMediaPermissionsDialogContent": "L'attuale implementazione di chiamate vocali/video esporrà il tuo indirizzo IP ai server Oxen Foundation e all'utente chiamante/chiamato.",
+  "menuCall": "Chiamata",
+  "startedACall": "Hai chiamato $name$",
+  "answeredACall": "Chiamata con $name$"
 }
