--- a/_locales/no/messages.json
+++ b/_locales/no/messages.json
@@ -252,9 +252,7 @@
   "userUnbanned": "Bruker ikke lenger utestengt",
   "userUnbanFailed": "Oppheving av utestengelse mislyktes!",
   "banUser": "Utesteng bruker",
-  "banUserConfirm": "Er du sikker på at du vil utestenge brukeren?",
   "banUserAndDeleteAll": "Utesteng og slett alle",
-  "banUserAndDeleteAllConfirm": "Er du sikker på at du vil utestenge brukeren og slette alle beskjedene hans?",
   "userBanned": "Lyktes med å utestenge brukeren",
   "userBanFailed": "Utestengelse mislyktes!",
   "leaveGroup": "Forlat gruppen",
@@ -375,7 +373,6 @@
   "openGroupURL": "URL for åpen gruppe",
   "enterAnOpenGroupURL": "Skriv inn en åpen gruppe-URL",
   "next": "Neste",
-  "description": "1 minutt",
   "invalidGroupNameTooShort": "Vennligst skriv inn et gruppenavn",
   "invalidGroupNameTooLong": "Vennligst skriv inn et kortere gruppenavn",
   "pickClosedGroupMember": "Vennligst velg minst 1 gruppemedlem",
@@ -458,6 +455,7 @@
   "noAudioOutputFound": "No audio output found",
   "callMediaPermissionsTitle": "Voice and video calls",
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
   "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
   "menuCall": "Call",
