--- a/_locales/si/messages.json
+++ b/_locales/si/messages.json
@@ -252,9 +252,7 @@
   "userUnbanned": "User unbanned successfully",
   "userUnbanFailed": "Unban failed!",
   "banUser": "Ban User",
-  "banUserConfirm": "Are you sure you want to ban the user?",
   "banUserAndDeleteAll": "Ban and Delete All",
-  "banUserAndDeleteAllConfirm": "Are you sure you want to ban the user and delete all his messages?",
   "userBanned": "Banned successfully",
   "userBanFailed": "Ban failed!",
   "leaveGroup": "සමූහය හැරයන්න",
@@ -327,7 +325,7 @@
   "addAsModerator": "Add as Moderator",
   "removeFromModerators": "Remove From Moderators",
   "add": "එකතු කරන්න",
-  "addingContacts": "Adding contacts to",
+  "addingContacts": "Adding contacts to $name$",
   "noContactsToAdd": "එකතු කිරීමට සබඳතා නැත",
   "noMembersInThisGroup": "මෙම සමූහයේ වෙනත් සාමාජිකයින් නැත",
   "noModeratorsToRemove": "no moderators to remove",
@@ -375,7 +373,6 @@
   "openGroupURL": "සමූහයේ ඒ.ස.නි. විවෘත කරන්න",
   "enterAnOpenGroupURL": "විවෘත සමූහ ඒ.ස.නි. ක් ඇතුල්කරන්න",
   "next": "ඊළඟ",
-  "description": "විනාඩි 1",
   "invalidGroupNameTooShort": "සමූහ නාමයක් ඇතුල් කරන්න",
   "invalidGroupNameTooLong": "කෙටි සමූහ නාමයක් ඇතුල් කරන්න",
   "pickClosedGroupMember": "Please pick at least 1 group member",
@@ -458,6 +455,7 @@
   "noAudioOutputFound": "No audio output found",
   "callMediaPermissionsTitle": "Voice and video calls",
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
   "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
   "menuCall": "Call",
