--- a/_locales/vi/messages.json
+++ b/_locales/vi/messages.json
@@ -1,17 +1,17 @@
 {
-  "privacyPolicy": "Terms & Privacy Policy",
+  "privacyPolicy": "Điều khoản và Chính sách bảo mật",
   "copyErrorAndQuit": "Copy error and quit",
   "unknown": "Không rõ",
-  "databaseError": "Database Error",
+  "databaseError": "Lỗi cơ sở dữ liệu",
   "mainMenuFile": "&File",
   "mainMenuEdit": "&Edit",
   "mainMenuView": "&View",
   "mainMenuWindow": "&Window",
   "mainMenuHelp": "&Trợ giúp",
-  "appMenuHide": "Hide",
+  "appMenuHide": "Ẩn đi",
   "appMenuHideOthers": "Hide Others",
   "appMenuUnhide": "Show All",
-  "appMenuQuit": "Quit Session",
+  "appMenuQuit": "Thoát Session",
   "editMenuUndo": "Hoàn tác",
   "editMenuRedo": "Redo",
   "editMenuCut": "Cut",
@@ -25,10 +25,10 @@
   "windowMenuZoom": "Zoom",
   "windowMenuBringAllToFront": "Bring All to Front",
   "viewMenuResetZoom": "Actual Size",
-  "viewMenuZoomIn": "Zoom In",
-  "viewMenuZoomOut": "Zoom Out",
+  "viewMenuZoomIn": "Phóng to",
+  "viewMenuZoomOut": "Thu nhỏ",
   "viewMenuToggleFullScreen": "Toggle Full Screen",
-  "viewMenuToggleDevTools": "Toggle Developer Tools",
+  "viewMenuToggleDevTools": "Bật/Tắt Công Cụ Nhà Phát Triển",
   "contextMenuNoSuggestions": "No Suggestions",
   "openGroupInvitation": "Open group invitation",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
@@ -75,8 +75,8 @@
   "debugLog": "Debug Log",
   "showDebugLog": "Show Debug Log",
   "goToReleaseNotes": "Go to Release Notes",
-  "goToSupportPage": "Go to Support Page",
-  "menuReportIssue": "Report an Issue",
+  "goToSupportPage": "Đi đến trang Hỗ trợ",
+  "menuReportIssue": "Báo lỗi",
   "about": "About",
   "speech": "Speech",
   "show": "Show",
@@ -85,7 +85,7 @@
   "noSearchResults": "No results for \"$searchTerm$\"",
   "conversationsHeader": "Conversations",
   "contactsHeader": "Liên hệ",
-  "messagesHeader": "Messages",
+  "messagesHeader": "Tin nhắn",
   "settingsHeader": "Cài đặt",
   "typingAlt": "Typing animation for this conversation",
   "contactAvatarAlt": "Avatar for contact $name$",
@@ -102,7 +102,7 @@
   "audio": "Âm thanh",
   "video": "Đoạn phim",
   "photo": "Photo",
-  "cannotUpdate": "Cannot Update",
+  "cannotUpdate": "Không thể cập nhật",
   "cannotUpdateDetail": "Session Desktop failed to update, but there is a new version available. Please go to https://getsession.org/ and install the new version manually, then either contact support or file a bug about this problem.",
   "ok": "Đồng ý",
   "cancel": "Hủy",
@@ -199,8 +199,8 @@
   "disappearingMessages": "Xóa (tự động) tin nhắn",
   "changeNickname": "Change Nickname",
   "clearNickname": "Clear nickname",
-  "nicknamePlaceholder": "New Nickname",
-  "changeNicknameMessage": "Enter a nickname for this user",
+  "nicknamePlaceholder": "Biệt danh mới",
+  "changeNicknameMessage": "Thêm biệt danh mới cho người dùng này",
   "timerOption_0_seconds_abbreviated": "tắt",
   "timerOption_5_seconds_abbreviated": "5 giây",
   "timerOption_10_seconds_abbreviated": "10 giây",
@@ -224,14 +224,14 @@
   "invalidNumberError": "Số không chính xác",
   "failedResolveOns": "Failed to resolve ONS name",
   "successUnlinked": "Thiết bị của bạn đã được ngắt liên kết thành công",
-  "autoUpdateSettingTitle": "Auto Update",
+  "autoUpdateSettingTitle": "Tự động cập nhật",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
   "autoUpdateNewVersionTitle": "Session update available",
   "autoUpdateNewVersionMessage": "There is a new version of Session available.",
-  "autoUpdateNewVersionInstructions": "Press Restart Session to apply the updates.",
-  "autoUpdateRestartButtonLabel": "Restart Session",
+  "autoUpdateNewVersionInstructions": "Ấn vào Khởi động lại Session để cập nhật.",
+  "autoUpdateRestartButtonLabel": "Khởi động lại Session",
   "autoUpdateLaterButtonLabel": "Sau này",
-  "autoUpdateDownloadButtonLabel": "Download",
+  "autoUpdateDownloadButtonLabel": "Tải xuống",
   "autoUpdateDownloadedMessage": "The new update has been downloaded.",
   "autoUpdateDownloadInstructions": "Would you like to download the update?",
   "leftTheGroup": "$name$ đã rời khỏi nhóm.",
@@ -252,9 +252,7 @@
   "userUnbanned": "User unbanned successfully",
   "userUnbanFailed": "Unban failed!",
   "banUser": "Ban User",
-  "banUserConfirm": "Are you sure you want to ban user?",
   "banUserAndDeleteAll": "Ban and Delete All",
-  "banUserAndDeleteAllConfirm": "Are you sure you want to ban the user and delete all his messages?",
   "userBanned": "User banned successfully",
   "userBanFailed": "Ban failed!",
   "leaveGroup": "Rời nhóm",
@@ -279,16 +277,16 @@
   "changeAccountPasswordDescription": "Change your password",
   "removeAccountPasswordTitle": "Remove Account Password",
   "removeAccountPasswordDescription": "Remove the password associated with your account",
-  "enterPassword": "Please enter your password",
-  "confirmPassword": "Confirm password",
-  "pasteLongPasswordToastTitle": "The clipboard content exceeds the maximum password length of $max_pwd_len$ characters.",
+  "enterPassword": "Vui lòng nhập mật khẩu",
+  "confirmPassword": "Xác nhận mật khẩu",
+  "pasteLongPasswordToastTitle": "Nội dung từ bảng ghi tạm vượt quá độ dài tối đa của mật khẩu ($max_pwd_len$ ký tự).",
   "showRecoveryPhrasePasswordRequest": "Please enter your password",
   "recoveryPhraseSavePromptMain": "Cụm từ khôi phục của bạn là chìa khoá chủ cho Session ID của bạn — bạn có thể sử dụng nó để khôi phục Session ID khi bị mất tiếp cận với thiết bị của bạn. Hãy lưu cụm từ khôi phục của bạn ở một nơi an toàn và không cung cấp cho bất kì ai.",
-  "invalidOpenGroupUrl": "Invalid URL",
+  "invalidOpenGroupUrl": "URL không hợp lệ",
   "copiedToClipboard": "Sao chép vào bộ nhớ tạm",
   "passwordViewTitle": "Type In Your Password",
   "unlock": "Mở khóa",
-  "password": "Password",
+  "password": "Mật khẩu",
   "setPassword": "Set Password",
   "changePassword": "Change Password",
   "removePassword": "Remove Password",
@@ -297,13 +295,13 @@
   "invalidOldPassword": "Old password is invalid",
   "invalidPassword": "Invalid password",
   "noGivenPassword": "Please enter your password",
-  "passwordsDoNotMatch": "Passwords do not match",
-  "setPasswordInvalid": "Passwords do not match",
-  "changePasswordInvalid": "The old password you entered is incorrect",
-  "removePasswordInvalid": "Incorrect password",
-  "setPasswordTitle": "Set Password",
-  "changePasswordTitle": "Changed Password",
-  "removePasswordTitle": "Removed Password",
+  "passwordsDoNotMatch": "Mật khẩu không khớp",
+  "setPasswordInvalid": "Mật khẩu không khớp",
+  "changePasswordInvalid": "Mật khẩu cũ chưa đúng",
+  "removePasswordInvalid": "Mật khẩu không chính xác",
+  "setPasswordTitle": "Thiết lập mật khẩu",
+  "changePasswordTitle": "Đổi mật khẩu thành công",
+  "removePasswordTitle": "Xóa mật khẩu thành công",
   "setPasswordToastDescription": "Your password has been set. Please keep it safe.",
   "changePasswordToastDescription": "Your password has been changed. Please keep it safe.",
   "removePasswordToastDescription": "You have removed your password.",
@@ -327,7 +325,7 @@
   "addAsModerator": "Add As Moderator",
   "removeFromModerators": "Remove From Moderators",
   "add": "Add",
-  "addingContacts": "Adding contacts to",
+  "addingContacts": "Adding contacts to $name$",
   "noContactsToAdd": "No contacts to add",
   "noMembersInThisGroup": "No other members in this group",
   "noModeratorsToRemove": "no moderators to remove",
@@ -375,7 +373,6 @@
   "openGroupURL": "URL của nhóm mở",
   "enterAnOpenGroupURL": "Nhập URL của nhóm mở",
   "next": "Next",
-  "description": "Description",
   "invalidGroupNameTooShort": "Vui lòng nhập tên nhóm",
   "invalidGroupNameTooLong": "Vui lòng nhập một tên nhóm ngắn hơn",
   "pickClosedGroupMember": "Vui lòng chọn ít nhất 2 thành viên trong nhóm",
@@ -435,7 +432,7 @@
   "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
   "notificationSubtitle": "Notifications - $setting$",
   "surveyTitle": "Take our Session Survey",
-  "goToOurSurvey": "Go to our survey",
+  "goToOurSurvey": "Truy cập khảo sát của chúng tôi",
   "blockAll": "Block All",
   "messageRequests": "Message Requests",
   "requestsSubtitle": "Pending Requests",
@@ -445,12 +442,12 @@
   "ringing": "Ringing...",
   "establishingConnection": "Establishing connection...",
   "accept": "Accept",
-  "decline": "Decline",
+  "decline": "Từ chối",
   "endCall": "End call",
   "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
   "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
   "unableToCall": "Cancel your ongoing call first",
-  "unableToCallTitle": "Cannot start new call",
+  "unableToCallTitle": "Không thể bắt đầu cuộc gọi mới",
   "callMissed": "Missed call from $name$",
   "callMissedTitle": "Call missed",
   "noCameraFound": "No camera found",
@@ -458,9 +455,10 @@
   "noAudioOutputFound": "No audio output found",
   "callMediaPermissionsTitle": "Voice and video calls",
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to him first.",
   "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
   "menuCall": "Call",
-  "startedACall": "You called $name$",
+  "startedACall": "Bạn đã gọi $name$",
   "answeredACall": "Call with $name$"
 }
